######## 2016-04-06 #########
alter table flashsale_cushops_detail add column model int(11) default 0;
######## 2016-04-02 ########
DROP TABLE IF EXISTS `flashsale_package`;
CREATE TABLE `flashsale_package` (
  `id` varchar(100) NOT NULL,
  `ware_by` int(11) NOT NULL,
  `status` varchar(32) NOT NULL,
  `sys_status` varchar(32) NOT NULL,
  `receiver_name` varchar(25) NOT NULL,
  `receiver_state` varchar(16) NOT NULL,
  `receiver_city` varchar(16) NOT NULL,
  `receiver_district` varchar(16) NOT NULL,
  `receiver_address` varchar(128) NOT NULL,
  `receiver_zip` varchar(10) NOT NULL,
  `receiver_mobile` varchar(24) NOT NULL,
  `receiver_phone` varchar(20) NOT NULL,
  `buyer_id` bigint(20) NOT NULL,
  `user_address_id` bigint(20) DEFAULT NULL,
  `post_cost` double NOT NULL,
  `is_lgtype` tinyint(1) NOT NULL,
  `lg_aging` datetime DEFAULT NULL,
  `lg_aging_type` varchar(20) NOT NULL,
  `out_sid` varchar(64) NOT NULL,
  `logistics_company_id` bigint(20) DEFAULT NULL,
  `weight` varchar(10) NOT NULL,
  `is_qrcode` tinyint(1) NOT NULL,
  `qrcode_msg` varchar(32) NOT NULL,
  `can_review` tinyint(1) NOT NULL,
  `priority` int(11) NOT NULL,
  `operator` varchar(32) NOT NULL,
  `scanner` varchar(64) NOT NULL,
  `weighter` varchar(64) NOT NULL,
  `is_locked` tinyint(1) NOT NULL,
  `is_charged` tinyint(1) NOT NULL,
  `created` datetime DEFAULT NULL,
  `merged` datetime DEFAULT NULL,
  `send_time` datetime DEFAULT NULL,
  `weight_time` datetime DEFAULT NULL,
  `charge_time` datetime DEFAULT NULL,
  `remind_time` datetime DEFAULT NULL,
  `reason_code` varchar(100) NOT NULL,
  `redo_sign` tinyint(1) NOT NULL,
  `modified` datetime DEFAULT NULL,
  `merge_trade_id` bigint(20) DEFAULT NULL,
  PRIMARY KEY (`id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8;

DROP TABLE IF EXISTS `flashsale_package_stat`;
CREATE TABLE `flashsale_package_stat` (
  `id` varchar(95) NOT NULL,
  `num` int(11) NOT NULL DEFAULT '0',
  PRIMARY KEY (`id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8;
