@@ -1,5 +1,6 @@
 ######## 2016-04-06 #########
 alter table flashsale_cushops_detail add column model int(11) default 0;
+alter table suplychain_flashsale_orderlist add column is_postpay smallint default 0;
 ######## 2016-04-02 ########
 DROP TABLE IF EXISTS `flashsale_package`;
 CREATE TABLE `flashsale_package` (
